--- a/wasm_resources/index.html
+++ b/wasm_resources/index.html
@@ -136,7 +136,7 @@
       })();
     </script>
     <script type="module">
-      import init from "$BASEPATH/littlefighter2.js";
+      import init from "$BASEPATH/punchy.js";
       init();
     </script>
   </body>
