Move /demo to /player/v0.0.2

--- a/player/v0.0.2/index.html
+++ b/player/v0.0.2/index.html
@@ -136,7 +136,7 @@
       })();
     </script>
     <script type="module">
-      import init from "/punchy/demo/littlefighter2.js";
+      import init from "./littlefighter2.js";
       init();
     </script>
   </body>
